[project]
name = "agentic-phidata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brave-search>=0.1.8",
    "crawl4ai>=0.4.247",
    "docx>=0.2.4",
    "duckduckgo-search>=7.2.1",
    "fastapi>=0.115.6",
    "groq>=0.15.0",
    "phidata>=2.7.7",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "spider-client>=0.1.25",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.51",
]
